--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
+@import '@fontsource/inter';
+
+@layer base {
+  html {
+    font-family: 'Inter', system-ui, sans-serif;
+  }
+}
+
+html {
+  font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
