--- a/client/src/styles/markdown.css
+++ b/client/src/styles/markdown.css
@@ -21,8 +21,8 @@
 }
 
 .markdown-content p {
-  margin-top: 1em;
-  margin-bottom: 1em;
+  /* margin-top: 1em; */
+  /* margin-bottom: 1em; */
 }
 
 .markdown-content ul {
@@ -50,13 +50,12 @@
 }
 
 .markdown-content pre {
-  background-color: #f4f4f4;
-  padding: 1em;
-  overflow-x: auto;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
-.markdown-content code {
+/* .markdown-content code {
   background-color: #f4f4f4;
   padding: 0.2em 0.4em;
   border-radius: 3px;
-}
+} */
